--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,24 +63,8 @@ jobs:
       # ✏️ If the Autobuild fails above, remove it and uncomment the following three lines
       #    and modify them (or add more) to build your code if your project
       #    uses a compiled language
-
-      - name: Generate settings.xml
-        uses: DamianReeves/write-file-action@v1.0
-        with:
-          path: .m2/settings.xml
-          contents: |
-            <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">
-              <servers>
-                <server>
-                <id>github</id>
-                <username>${{ secrets.USER }}</username>
-                <password>${{ secrets.TOKEN }}</password>
-                </server>
-              </servers>
-            </settings>
-          write-mode: overwrite
       - name: Build with Maven
-        run: mvn -B deploy --settings .m2/settings.xml --file pom.xml
+        run: mvn -B package --file pom.xml
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
